# avoidome-analysis

./: .gitignore  20240207_download_PDB_from_uniprot.ipynb  LICENSE  README.md  adme_names.yml  lit-review.yml  pyproject.toml  transporter_names.yml
avoidome/: schema.py  structures.py  target.py  uniprot.py
data/: admet_names_curated.yml  genes_of_interest.txt
data/alphafold_downloads/: 5HT2B_HUMAN.cif  A1AG1_HUMAN.cif  ABCBB_HUMAN.cif  ABCG2_HUMAN.cif  ACHA3_HUMAN.cif  ACHA7_HUMAN.cif  ACHA9_HUMAN.cif  ACM1_HUMAN.cif  ACM2_HUMAN.cif  ACM3_HUMAN.cif  ADA1A_HUMAN.cif  ADA2A_HUMAN.cif  ADRB2_HUMAN.cif  AF-O75469-F1.cif  AF-P07327-F1.cif  AF-P08183-F1.cif  AF-P08588-F1.cif  AF-P14867-F1.cif  AF-P21554-F1.cif  AF-P27338-F1.cif  AF-P30532-F1.cif  AF-P31645-F1.cif  AF-P33261-F1.cif  AF-P34972-F1.cif  AF-Q01959-F1.cif  AF-Q03135-F1.cif  AF-Q06546-F1.cif  AF-Q14524-F1.cif  AF-Q15070-F1.cif  AF-Q96F85-F1.cif  AF-Q9BTC0-F1.cif  AF-Q9GZZ6-F1.cif  AF-Q9UHE5-F1.cif  AHR_HUMAN.cif  AL1A1_HUMAN.cif  ALBU_HUMAN.cif  AOFA_HUMAN.cif  AOXA_HUMAN.cif  ARK73_HUMAN.cif  ASM3A_HUMAN.cif  (+23 more)
data/uniprot_downloads/: 5HT2B_HUMAN.yml  A1AG1_HUMAN.yml  ABCBB_HUMAN.yml  ABCG2_HUMAN.yml  ACH10_HUMAN.yml  ACHA3_HUMAN.yml  ACHA5_HUMAN.yml  ACHA7_HUMAN.yml  ACHA9_HUMAN.yml  ACM1_HUMAN.yml  (+55 more)
science/: 20240207_download_PDB_from_uniprot.ipynb  20240220_add_alphafold_confidence_analysis.ipynb  20240220_test_new_schema.ipynb  20240221_full_admet_analysis.ipynb  20240222_process_data_v2.ipynb  20240226_heatmap_plotting_testing.ipynb  uniprot_dumpster_dive.ipynb
software/: structures.py  target.py
